# quartermaster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: joints.md
scripts/: blender_smoke.py  build_addon.sh
src/quartermaster/: __init__.py  blender_manifest.toml  joint_strategy.py  plane.py
src/quartermaster/blender/: __init__.py  adapter.py  cut.py  fixtures.py  operators.py  panel.py
src/quartermaster/joints/: __init__.py  box.py  dovetail.py  finger.py  half_lap.py  preview.py  scarf.py  sliding_dovetail.py
tests/: test_blender_adapter.py  test_box.py  test_cut_geometry.py  test_dovetail.py  test_finger.py  test_half_lap.py  test_joint_preview.py  test_joint_strategy.py  test_plane.py  test_scarf.py  test_sliding_dovetail.py
