[project]
name = "quartermaster"
version = "0.0.1"
description = "Auto-split prints that exceed your build plate, with the right joinery for the stock"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8"]
